--- a/reserve.html
+++ b/reserve.html
@@ -98,7 +98,7 @@
                           <div class="package-row">
 
                               <label class="package">
-                                <input type="radio" name="package" value="1-day" required>
+                                <input type="radio" name="package" value="day-1" required>
                                 <div class="package-content">
                                   <span class="check-circle"></span> <!-- New element for the circle -->
                                   <!--<span class="popular-banner">Most Popular</span>-->
@@ -115,7 +115,7 @@
                               </label>
 
                               <label class="package" data-most-popular="true">
-                                <input type="radio" name="package" value="2-day">
+                                <input type="radio" name="package" value="day-2">
                                 <div class="package-content">
                                   <span class="check-circle"></span> <!-- New element for the circle -->
                                   <!--<span class="popular-banner">Most Popular</span>-->
@@ -137,7 +137,7 @@
                           <div class="package-row">
 
                               <label class="package">
-                                <input type="radio" name="package" value="3-day">
+                                <input type="radio" name="package" value="day-3">
                                 <div class="package-content">
                                   <span class="check-circle"></span> <!-- New element for the circle -->
                                   <div class="package-left">
