--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
                           <div class="package-row">
 
                               <label class="package">
-                                <input type="radio" name="package" value="1-day" required>
+                                <input type="radio" name="package" value="day-1" required>
                                 <div class="package-content">
                                   <span class="check-circle"></span> <!-- New element for the circle -->
                                   <!--<span class="popular-banner">Most Popular</span>-->
@@ -678,7 +678,7 @@
                               </label>
 
                               <label class="package" data-most-popular="true">
-                                <input type="radio" name="package" value="2-day">
+                                <input type="radio" name="package" value="day-2">
                                 <div class="package-content">
                                   <span class="check-circle"></span> <!-- New element for the circle -->
                                   <!--<span class="popular-banner">Most Popular</span>-->
@@ -700,7 +700,7 @@
                           <div class="package-row">
 
                               <label class="package">
-                                <input type="radio" name="package" value="3-day">
+                                <input type="radio" name="package" value="day-3">
                                 <div class="package-content">
                                   <span class="check-circle"></span> <!-- New element for the circle -->
                                   <div class="package-left">
@@ -820,7 +820,9 @@
           <p>Lock In Your Adventure<br> with 15% Upfront!</p>
         </div>
 
-        <button class="reserve-btn">Reserve now</button>
+
+        <a href ="reserve.html" class ="mobile-show">Reserve now</a>
+
       </div>
     </div>
 
