--- a/index.html
+++ b/index.html
@@ -132,8 +132,7 @@
 
                             <div class ="gallery-1">
                               <a href="img/g1-1-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                                <img loading = "lazy" src="img/g1-1.jpg">
-                              </a>
+                                <img loading="lazy" src="img/g1-1.jpg" alt="Horses riding off to the mountains in Snæfellsnes, Iceland.">                              </a>
                               <a href="img/g1-2-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
                                 <img loading = "lazy" src="img/g1-2.jpg">
                               </a>
