--- a/index.html
+++ b/index.html
@@ -131,8 +131,9 @@
                         <div class="gallery-row">
 
                             <div class ="gallery-1">
-                              <a href="img/g1-1-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                                <img loading="lazy" src="img/g1-1.jpg" alt="Horses riding off to the mountains in Snæfellsnes, Iceland.">                              </a>
+                              <a href="img/g1-1-fullres.jpg" class="glightbox" data-gallery="mygallery" aria-label="View full resolution image of mountain landscape">
+                                <img loading="lazy" src="img/g1-1.jpg" alt="Mountain landscape in Snæfellsnes with horses running">
+                              </a>
                               <a href="img/g1-2-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
                                 <img loading = "lazy" src="img/g1-2.jpg">
                               </a>
