--- a/email.html
+++ b/email.html
@@ -136,7 +136,7 @@
                                         <table cellpadding="0" cellspacing="0" border="0" style="text-align: center;">
                                             <tr>
                                                 <td>
-                                                    <img style="width: 115px; height: 54px;" src="https://www.wildline.fishing/img/email/staff.jpg" alt="Staff Image">
+                                                    <img style="width: 115px; height: 54px;" src="https://www.wildline.fishing/img/email/staff.png" alt="Staff Image">
                                                 </td>
                                             </tr>
                                             <tr>
@@ -313,7 +313,7 @@
                                         <table cellpadding="0" cellspacing="0" border="0" style="text-align: center;">
                                             <tr>
                                                 <td>
-                                                    <img style="width: 115px; height: 54px;" src="https://www.wildline.fishing/img/email/staff.jpg" alt="Staff Image">
+                                                    <img style="width: 115px; height: 54px;" src="https://www.wildline.fishing/img/email/staff.png" alt="Staff Image">
                                                 </td>
                                             </tr>
                                             <tr>
