--- a/thank-you.html
+++ b/thank-you.html
@@ -65,9 +65,10 @@
             We’ll get back with you via<br> email as early as possible
           </h2>
           <div class="mail-container">
-            <img src="mail.svg">
+            <img src="img/staff-2.png">
             <h3 class="white">
               Sent to <span style = "all: unset;" id="user-email">[Loading...]</span>
+              <p>We’ll get back to with an exact quote, payment link and answers to any question you might have within the next 24 hours.</p>
             </h3>
           </div>
 
