--- a/index.html
+++ b/index.html
@@ -172,38 +172,22 @@
                         <!-- Hidden gallery -->
 
 
-                        <a href="img/gallery-1/1.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                        </a>
-                        <a href="img/gallery-1/2.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                        </a>
-                        <a href="img/g1-6-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                        </a>
-                        <a href="img/gallery-1/3.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                        </a>
-                        <a href="img/gallery-1/4.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                        </a>
-                        <a href="img/gallery-1/5.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                        </a>
-                        <a href="img/gallery-1/6.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                        </a>
-                        <a href="img/gallery-1/7.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                        </a>
-                        <a href="img/gallery-1/8.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                        </a>
-                        <a href="img/gallery-1/9.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                        </a>
-                        <a href="img/gallery-1/10.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                        </a>
-                        <a href="img/gallery-1/11.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                        </a>
-                        <a href="img/gallery-1/12.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                        </a>
-                        <a href="img/gallery-1/13.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                        </a>
-                        <a href="img/gallery-1/14.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                        </a>
-                        <a href="img/gallery-1/15.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                        </a>
+                        <a href="img/gallery-1/1.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="Beautiful river in Snæfellsnes, perfect for fly fishing"></a>
+                        <a href="img/gallery-1/2.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="Scenic view of Snæfellsnes mountains and river"></a>
+                        <a href="img/g1-6-fullres.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="Close-up of a fish caught during fly fishing"></a>
+                        <a href="img/gallery-1/3.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="Peaceful river flowing through Snæfellsnes"></a>
+                        <a href="img/gallery-1/4.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="Stunning view of Snæfellsnes river and mountains"></a>
+                        <a href="img/gallery-1/5.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="Fly fishing in the serene Snæfellsnes landscape"></a>
+                        <a href="img/gallery-1/6.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="Beautiful river surrounded by greenery in Snæfellsnes"></a>
+                        <a href="img/gallery-1/7.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="Majestic mountains and a calm river in Snæfellsnes"></a>
+                        <a href="img/gallery-1/8.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="Fly fishing adventure in a Snæfellsnes river"></a>
+                        <a href="img/gallery-1/9.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="Crystal-clear river in Snæfellsnes for fishing"></a>
+                        <a href="img/gallery-1/10.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="Fishing in calm waters with mountain views"></a>
+                        <a href="img/gallery-1/11.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="Scenic Snæfellsnes river and landscape"></a>
+                        <a href="img/gallery-1/12.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="Tranquil river for fly fishing in Snæfellsnes"></a>
+                        <a href="img/gallery-1/13.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="Peaceful fly fishing scene in Snæfellsnes"></a>
+                        <a href="img/gallery-1/14.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="Close-up of fishing gear by a river"></a>
+                        <a href="img/gallery-1/15.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="Beautiful Snæfellsnes river landscape"></a>
 
 
                       </div>
