--- a/index.html
+++ b/index.html
@@ -130,35 +130,32 @@
 
                         <div class="gallery-row">
 
-                            <div class ="gallery-1">
-                              <a href="img/g1-1-fullres.jpg" class="glightbox" data-gallery="mygallery" aria-label="View full resolution image of mountain landscape">
-                                <img loading="lazy" src="img/g1-1.jpg" alt="Mountain landscape in Snæfellsnes with horses running">
+                          <div class="gallery-1">
+                            <a href="img/g1-1-fullres.jpg" class="glightbox" data-gallery="mygallery" aria-label="View full resolution image of mountain landscape with cows grazing">
+                              <img loading="lazy" src="img/g1-1.jpg" alt="Mountain landscape with cows grazing">
+                            </a>
+                            <a href="img/g1-2-fullres.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="View full resolution image of a serene river surrounded by mountains">
+                              <img loading="lazy" src="img/g1-2.jpg" alt="Serene river surrounded by mountains">
+                            </a>
+                          </div>
+
+                          <div class="gallery-2">
+                            <div class="gallery-2-top">
+                              <a href="img/g1-3-fullres.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="View full resolution image of a sunset over the river">
+                                <img loading="lazy" src="img/g1-3.jpg" alt="Sunset over the river">
                               </a>
-                              <a href="img/g1-2-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                                <img loading = "lazy" src="img/g1-2.jpg">
+                              <a href="img/g1-4-fullres.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="View full resolution image of a fisherman casting a line">
+                                <img loading="lazy" src="img/g1-4.jpg" alt="Fisherman casting a line">
                               </a>
                             </div>
-                            <div class="gallery-2">
-
-                              <div class = "gallery-2-top">
-                                <a href="img/g1-3-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                                  <img loading = "lazy" src="img/g1-3.jpg">
-                                </a>
-
-                                <a href="img/g1-4-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                                  <img loading = "lazy" src="img/g1-4.jpg">
-                                </a>
-
-                              </div>
-                              <div class="gallery-2-bottom">
-                                <a href="img/g1-5-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                                  <img loading = "lazy" class = "gallery-img-last" loading = "lazy" src="img/g1-5.jpg">
-                                </a>
-                              </div>
+                            <div class="gallery-2-bottom">
+                              <a href="img/g1-5-fullres.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="View full resolution image of calm waters with mountains in the distance">
+                                <img loading="lazy" class="gallery-img-last" src="img/g1-5.jpg" alt="Calm waters with mountains in the distance">
+                              </a>
                             </div>
+                          </div>
 
                         </div>
-
                         <div class="gallery-3">
 
                           <a href="img/g1-5-fullres.jpg" loading="lazy" class="glightbox" data-gallery="mygallery">
@@ -172,22 +169,38 @@
                         <!-- Hidden gallery -->
 
 
-                        <a href="img/gallery-1/1.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="Beautiful river in Snæfellsnes, perfect for fly fishing"></a>
-                        <a href="img/gallery-1/2.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="Scenic view of Snæfellsnes mountains and river"></a>
-                        <a href="img/g1-6-fullres.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="Close-up of a fish caught during fly fishing"></a>
-                        <a href="img/gallery-1/3.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="Peaceful river flowing through Snæfellsnes"></a>
-                        <a href="img/gallery-1/4.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="Stunning view of Snæfellsnes river and mountains"></a>
-                        <a href="img/gallery-1/5.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="Fly fishing in the serene Snæfellsnes landscape"></a>
-                        <a href="img/gallery-1/6.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="Beautiful river surrounded by greenery in Snæfellsnes"></a>
-                        <a href="img/gallery-1/7.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="Majestic mountains and a calm river in Snæfellsnes"></a>
-                        <a href="img/gallery-1/8.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="Fly fishing adventure in a Snæfellsnes river"></a>
-                        <a href="img/gallery-1/9.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="Crystal-clear river in Snæfellsnes for fishing"></a>
-                        <a href="img/gallery-1/10.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="Fishing in calm waters with mountain views"></a>
-                        <a href="img/gallery-1/11.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="Scenic Snæfellsnes river and landscape"></a>
-                        <a href="img/gallery-1/12.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="Tranquil river for fly fishing in Snæfellsnes"></a>
-                        <a href="img/gallery-1/13.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="Peaceful fly fishing scene in Snæfellsnes"></a>
-                        <a href="img/gallery-1/14.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="Close-up of fishing gear by a river"></a>
-                        <a href="img/gallery-1/15.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="Beautiful Snæfellsnes river landscape"></a>
+                        <a href="img/gallery-1/1.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                        </a>
+                        <a href="img/gallery-1/2.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                        </a>
+                        <a href="img/g1-6-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                        </a>
+                        <a href="img/gallery-1/3.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                        </a>
+                        <a href="img/gallery-1/4.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                        </a>
+                        <a href="img/gallery-1/5.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                        </a>
+                        <a href="img/gallery-1/6.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                        </a>
+                        <a href="img/gallery-1/7.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                        </a>
+                        <a href="img/gallery-1/8.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                        </a>
+                        <a href="img/gallery-1/9.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                        </a>
+                        <a href="img/gallery-1/10.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                        </a>
+                        <a href="img/gallery-1/11.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                        </a>
+                        <a href="img/gallery-1/12.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                        </a>
+                        <a href="img/gallery-1/13.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                        </a>
+                        <a href="img/gallery-1/14.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                        </a>
+                        <a href="img/gallery-1/15.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                        </a>
 
 
                       </div>
