--- a/index.html
+++ b/index.html
@@ -158,10 +158,9 @@
                         </div>
                         <div class="gallery-3">
 
-                          <a href="img/g1-5-fullres.jpg" loading="lazy" class="glightbox" data-gallery="mygallery">
-                            <img loading="lazy" class="gallery-img-last" src="img/g1-5.jpg">
+                          <a href="img/g1-5-fullres.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="View full resolution image of calm waters with mountains in the background">
+                            <img loading="lazy" class="gallery-img-last" src="img/g1-5.jpg" alt="Calm waters with mountains in the background">
                           </a>
-
                         </div>
 
 
@@ -271,80 +270,60 @@
 
                   <div class="gallery">
 
+                    <div class="gallery-row">
 
-
-                      <div class="gallery-row">
-
-                          <div class ="gallery-1">
-                            <a href="img/g2-1-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                              <img loading = "lazy" src="img/g2-1.jpg">
-                            </a>
-                            <a href="img/g2-2-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                              <img loading = "lazy" src="img/g2-2.jpg">
-                            </a>
-                          </div>
-                          <div class="gallery-2">
-
-                            <div class = "gallery-2-top">
-                              <a href="img/g2-3-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                                <img loading = "lazy" src="img/g2-3.jpg">
-                              </a>
-                              <a href="img/g2-4-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                                <img loading = "lazy" src="img/g2-4.jpg">
-                              </a>
-
-                            </div>
-                            <div class="gallery-2-bottom">
-                              <a href="img/g2-5-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                                <img loading = "lazy" class = "gallery-img-last" loading = "lazy" src="img/g2-5.jpg">
-                              </a>
-
-                              <a href="img/g2-6-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                                <img loading = "lazy" class = "gallery-img-last" loading = "lazy" src="img/g2-6.jpg">
-                              </a>
-                            </div>
-                          </div>
-
-                      </div>
-
-                      <div class="gallery-3">
-                        <a href="img/g2-5-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                          <img loading = "lazy" class = "gallery-img-last" loading = "lazy" src="img/g2-5.jpg">
+                      <div class="gallery-1">
+                        <a href="img/g2-1-fullres.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="View full resolution image of mountain scenery with a river">
+                          <img loading="lazy" src="img/g2-1.jpg" alt="Mountain scenery with a river">
+                        </a>
+                        <a href="img/g2-2-fullres.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="View full resolution image of a serene forest landscape">
+                          <img loading="lazy" src="img/g2-2.jpg" alt="Serene forest landscape">
                         </a>
                       </div>
 
-                      <!-- Hidden gallery -->
-
-                      <a href="img/gallery-2/1.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                      </a>
-                      <a href="img/gallery-2/2.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                      </a>
-                      <a href="img/gallery-2/3.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                      </a>
-                      <a href="img/gallery-2/4.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                      </a>
-                      <a href="img/gallery-2/5.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                      </a>
-                      <a href="img/gallery-2/6.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                      </a>
-                      <a href="img/gallery-2/7.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                      </a>
-                      <a href="img/gallery-2/8.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                      </a>
-                      <a href="img/gallery-2/9.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                      </a>
-                      <a href="img/gallery-2/10.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                      </a>
-                      <a href="img/gallery-2/11.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                      </a>
-                      <a href="img/gallery-2/12.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                      </a>
-                      <a href="img/gallery-2/2.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                      </a>
-
-
+                      <div class="gallery-2">
+                        <div class="gallery-2-top">
+                          <a href="img/g2-3-fullres.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="View full resolution image of sunset over the lake">
+                            <img loading="lazy" src="img/g2-3.jpg" alt="Sunset over the lake">
+                          </a>
+                          <a href="img/g2-4-fullres.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="View full resolution image of a fishing boat in the ocean">
+                            <img loading="lazy" src="img/g2-4.jpg" alt="Fishing boat in the ocean">
+                          </a>
+                        </div>
+                        <div class="gallery-2-bottom">
+                          <a href="img/g2-5-fullres.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="View full resolution image of calm river with mountains in the background">
+                            <img loading="lazy" class="gallery-img-last" src="img/g2-5.jpg" alt="Calm river with mountains in the background">
+                          </a>
+                          <a href="img/g2-6-fullres.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="View full resolution image of vibrant meadow under a clear sky">
+                            <img loading="lazy" class="gallery-img-last" src="img/g2-6.jpg" alt="Vibrant meadow under a clear sky">
+                          </a>
+                        </div>
+                      </div>
 
                     </div>
+
+                    <div class="gallery-3">
+                      <a href="img/g2-5-fullres.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="View full resolution image of calm river with mountains in the background">
+                        <img loading="lazy" class="gallery-img-last" src="img/g2-5.jpg" alt="Calm river with mountains in the background">
+                      </a>
+                    </div>
+
+                    <!-- Hidden gallery -->
+                    <a href="img/gallery-2/1.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="View hidden image 1"></a>
+                    <a href="img/gallery-2/2.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="View hidden image 2"></a>
+                    <a href="img/gallery-2/3.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="View hidden image 3"></a>
+                    <a href="img/gallery-2/4.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="View hidden image 4"></a>
+                    <a href="img/gallery-2/5.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="View hidden image 5"></a>
+                    <a href="img/gallery-2/6.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="View hidden image 6"></a>
+                    <a href="img/gallery-2/7.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="View hidden image 7"></a>
+                    <a href="img/gallery-2/8.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="View hidden image 8"></a>
+                    <a href="img/gallery-2/9.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="View hidden image 9"></a>
+                    <a href="img/gallery-2/10.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="View hidden image 10"></a>
+                    <a href="img/gallery-2/11.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="View hidden image 11"></a>
+                    <a href="img/gallery-2/12.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="View hidden image 12"></a>
+                    <a href="img/gallery-2/2.jpg" loading="lazy" class="glightbox" data-gallery="mygallery" aria-label="View hidden image duplicate 2"></a>
+
+                  </div>
 
                     <span>INCLUDED IN YOUR LODGE</span>
 
