--- a/index.html
+++ b/index.html
@@ -363,8 +363,8 @@
 
                         <div class="section-4-right mobile-show">
                           
-                          <img src="img/guide-1.jpg">
-                          <img src="img/guide-2.jpg">
+                          <img src="img/guide-1.jpg" alt="Magnús holding a Salmon in September">
+                          <img src="img/guide-2.jpg" alt="Guide with a kid and his first caught Atlantic Salmon">
 
                         </div>
 
@@ -551,7 +551,7 @@
 
              <p></p>
 
-             <img src="img/hero-back.webp" loading="eager">
+             <img src="img/hero-back.webp" loading="eager" alt="Background waves">
            </div>
 
 
