--- a/index.html
+++ b/index.html
@@ -733,9 +733,11 @@
                               <label for="pickup-location">Pick-up location</label>
                               <select id="pickup-location" class="custom-select" name="pickup-location" required>
                                 <option value="" disabled selected>Choose pick-up location</option>
-                                <option value="location1">Reykjavík central area</option>
-                                <option value="location2">Keflavík Airport</option>
-                                <option value="location2">Other / Outside of center area</option>
+                                <option value="Pick-up in Reykjavík central area">Reykjavík central area</option>
+                                <option value="Pick-up at KEF Airport">KEF Airport</option>
+                                <option value="Pick-up outside of Reykjavík central area">Other / Outside of center area</option>
+                                <option value="Transportation not needed">Transportation not needed</option>
+
                               </select>
                             </div>
                           </div>
