--- a/email.html
+++ b/email.html
@@ -25,6 +25,13 @@
         <tr>
             <td align="center">
                 <table width="600" cellpadding="0" cellspacing="0" border="0" style="background-color: #2C2E2C !important; border-radius: 16px; overflow: hidden;">
+
+                  <tr>
+                    <td>
+                      <img style = "height: 160px; width: 100%; object-fit: cover;" src="https://www.wildline.fishing/img/form-cover.jpg">
+                    </td>
+                  </tr>
+
                     <tr>
                         <td align="center" style="padding: 20px;">
                             <img src="https://www.wildline.fishing/img/email/logo.png" style="display: block; height: 57px; width: 67px;">
@@ -202,6 +209,14 @@
         <tr>
             <td align="center">
                 <table width="600" cellpadding="0" cellspacing="0" border="0" style="background-color: #2C2E2C !important; border-radius: 16px; overflow: hidden;">
+
+
+                  <tr>
+                    <td>
+                      <img style = "height: 160px; width: 100%; object-fit: cover;" src="https://www.wildline.fishing/img/form-cover.jpg">
+                    </td>
+                  </tr>
+                  
                     <tr>
                         <td align="center" style="padding: 20px;">
                             <img src="https://www.wildline.fishing/img/email/logo.png" style="display: block; height: 57px; width: 67px;">
