--- a/email.html
+++ b/email.html
@@ -5,6 +5,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="color-scheme" content="light">
+    <meta name="supported-color-schemes" content="light">
     <title>Reservation Confirmation</title>
 
     <style type="text/css">
@@ -189,6 +191,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="color-scheme" content="light">
+    <meta name="supported-color-schemes" content="light">
     <title>Reservation Confirmation</title>
 
     <style type="text/css">
@@ -216,7 +220,7 @@
                       <img style = "height: 160px; width: 100%; object-fit: cover;" src="https://www.wildline.fishing/img/form-cover.jpg">
                     </td>
                   </tr>
-                  
+
                     <tr>
                         <td align="center" style="padding: 20px;">
                             <img src="https://www.wildline.fishing/img/email/logo.png" style="display: block; height: 57px; width: 67px;">
