--- a/reserve.html
+++ b/reserve.html
@@ -143,13 +143,13 @@
                                       </div>
                                   </label>
                                   <label class="package">
-                                      <input type="radio" name="package" value="3-day">
+                                      <input type="radio" name="package" value="bespoke">
                                       <div class="package-content">
                                           <span class="check-circle"></span>
                                           <div class="package-left">
                                               <h3>Custom tour</h3>
                                               <span class="package-span custom-show">Expand your adventure to include more fly fishing hotspots or other exciting activities</span>
-                                              <p class="price desktop-show">Bespoke price</p>
+                                              <p class="price price-bespoke desktop-show">Bespoke price</p>
                                           </div>
                                       </div>
                                   </label>
