--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <html lang="en">
   <link rel="stylesheet" href="glightbox.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" href="https://wildline.fishing/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
    <title>Wildline Fly Fishing</title>
 
   <!-- Add CSS -->
