--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <html lang="en">
   <link rel="stylesheet" href="glightbox.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
-   <title>Wildline Fly Fishing</title>
+  <link rel="icon" type="image/x-icon" href="favicon.ico?v=1">
+  <title>Wildline Fly Fishing</title>
 
   <!-- Add CSS -->
   <link rel="stylesheet" href="calendar.css">
