--- a/thank-you.html
+++ b/thank-you.html
@@ -5,7 +5,7 @@
   <html lang="en">
   <link rel="stylesheet" href="glightbox.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/x-icon" href="favicon.ico?v=1">
   <title>Wildline Fly Fishing</title>
 
   <!-- Add CSS -->
@@ -14,11 +14,16 @@
   <!-- Add JS -->
   <script src="flatpickr.js"></script>
 
+  <meta property="og:title" content="Wildline Fly Fishing in Iceland">
+  <meta property="og:description" content="Unforgettable fly
+fishing journey in
+west Iceland. Full private lodging and river
+system from $1490 per person.">
+  <meta property="og:image" content="https://wildline.fishing/img/cover.jpg">
+  <meta property="og:type" content="website">
+
   <meta name="format-detection" content="telephone=no">
-  <meta name="description" content="AlltRaf Rafverktakar">
-  <meta property="og:image" content=""/>
-  <meta name="keywords" content="Rafverktakar, Rafvirki">
-  <meta name="author" content="AlltRaf Rafverktakar">  
+
   <meta http-equiv="Cache-Control" content="max-age=31536000">
   <meta name="theme-color" content="#2A2E28">
   <link rel="preload" href="img/hero-back.webp" as="image" type="image/webp">
