--- a/reserve.html
+++ b/reserve.html
@@ -140,7 +140,7 @@ system from $1490 per person.">
                                               <h3>3 day tour</h3>
                                               <span class="package-span">Catch them all!</span>
                                               <ul>
-                                                  <li><img class="package-icon" src="img/lodge.svg">1 night in lodge Lýsa</li>
+                                                  <li><img class="package-icon" src="img/lodge.svg">2 nights in lodge Lýsa</li>
                                                   <li><img class="package-icon" src="img/dine.svg">Breakfast, lunch, dinner</li>
                                               </ul>
                                               <p class="price">From $2490 per person</p>
