--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- Add JS -->
   <script src="flatpickr.js"></script>
 
-  <meta property="og:title" content="Wildline Fly Fishing in Iceland">
+  <meta property="og:title" content="Fly fishing in Iceland — Wildline guides">
   <meta property="og:description" content="Unforgettable fly
 fishing journey in
 west Iceland. Full private lodging and river
