--- a/email.html
+++ b/email.html
@@ -535,6 +535,122 @@
 
 
 
+<!-- Message -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="color-scheme" content="light">
+    <meta name="supported-color-schemes" content="light">
+    <title>Reservation Confirmation</title>
+
+    <style type="text/css">
+
+      @media only screen and (max-width: 880px){
+
+      table{
+        width: 100%;
+      }
+
+    }
+
+    </style>
+
+</head>
+<body style="margin: 0; padding: 0; font-family: Arial, sans-serif;">
+    <table width="100%" cellpadding="0" cellspacing="0" border="0" style=" padding: 20px 0;">
+        <tr>
+            <td align="center">
+                <table width="600" cellpadding="0" cellspacing="0" border="0" style="background-color: #2C2E2C !important; border-radius: 16px; overflow: hidden;">
+
+
+                  <tr>
+                    <td>
+                      <img style = "height: 160px; width: 100%; object-fit: cover;" src="https://www.wildline.fishing/img/form-cover.jpg">
+                    </td>
+                  </tr>
+
+                    <tr>
+                        <td align="center" style="padding: 20px;">
+                            <img src="https://www.wildline.fishing/img/email/logo.png" style="display: block; height: 99px; width: 120px;">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="padding: 0 32px;">
+                            <h1 style="color: #ffffff; font-size: 32px; font-weight: bold; text-align: center; margin: 0;">Your enquiry</h1>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="padding: 20px 32px;">
+     
+
+                            <table width="100%" cellpadding="0" cellspacing="0" border="0" style="background-color: #343734; border-radius: 8px; padding: 14px; margin-top: 10px;">
+                                <tr>
+                                    <td style="color: #ffffff; font-size: 12px; font-weight: bold; padding-bottom: 10px;">
+                                        CONTACT INFORMATION
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td style="color: #ffffff; font-size: 16px; font-weight: Regular; padding-bottom: 10px;">
+                                        Jonathan K. Wilson<br>
+                                        jon.k.wil@outlook.com
+                                    </td>
+                                </tr>
+                                <tr>
+                                </tr>
+                            </table>
+
+                            <table width="100%" cellpadding="0" cellspacing="0" border="0" style="background-color: #343734; border-radius: 8px; padding: 14px; margin-top: 10px;">
+                                <tr>
+                                    <td style="color: #ffffff; font-size: 12px; font-weight: bold; padding-bottom: 10px;">
+                                        COMMENT
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td style="color: #ffffff; font-size: 16px; font-weight: Regular; padding-bottom: 10px;">
+                                   How kid friendly is this tour and what are the chances of a beginner catching a fish? Do we need to bring anything?
+                                    </td>
+                                </tr>
+                                <tr>
+                                </tr>
+                            </table>
+
+
+                            <table width="100%" cellpadding="0" cellspacing="0" border="0" style="background-color: transparent; border-radius: 8px; margin-top: 10px;">
+                                <tr>
+                                    <td align="center" valign="middle" style="text-align: center; vertical-align: middle; padding: 20px 0;">
+                                        <!-- Wrapper table for precise alignment -->
+                                        <table cellpadding="0" cellspacing="0" border="0" style="text-align: center;">
+                                            <tr>
+                                                <td>
+                                                    <img style="width: 115px; height: 54px;" src="https://www.wildline.fishing/img/email/staff.png" alt="Staff Image">
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td style="color: #ffffff; font-size: 15px; font-weight: bold; padding-top: 10px; text-align: center;">
+                                                    We’ll get back to you as soon as possible with an
+                                                    exact quote, payment link, and answers to any
+                                                    questions you might have.
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                </tr>
+                            </table>
+
+                        </td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+    </table>
+</body>
+</html>
+
+
+
 
 
 
